@@ -1,3 +1,10 @@
+2006-03-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* acinclude.m4 (AM_PATH_GTK):
+	(AM_PATH_IMLIB):
+	(AM_PATH_GDK_IMLIB):
+	fixed to cope with 4 digit version numbers
+
 2005-10-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/fvwm.h (FvwmWindow):
